--- a/forgotpassword.html
+++ b/forgotpassword.html
@@ -1,112 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  
-  <!-- Favicons -->
-  <link rel="icon" type="image/png" sizes="32x32" href="image/attendancelogo.png?v=1">
-  <link rel="icon" type="image/png" sizes="16x16" href="image/attendancelogo.png?v=1">
-  <link rel="shortcut icon" href="image/attendancelogo.png?v=1">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Change Password</title>
 
-  <title>Homepage - Recover</title>
+<style>
+  body, html { margin:0; padding:0; font-family: 'Segoe UI', sans-serif; background: linear-gradient(135deg, #6b73ff 0%, #000dff 100%); display:flex; justify-content:center; align-items:center; height:100vh;}
+  body::before, body::after { content: ''; position: fixed; border-radius: 50%; opacity: 0.15; filter: blur(100px); z-index: 0; }
+  body::before { width: 300px; height: 300px; background: #ff6b6b; top: 20%; left: 10%; }
+  body::after { width: 400px; height: 400px; background: #ffd93b; bottom: 10%; right: 15%; }
 
-  <style>
-    /* ORIGINAL CSS KEPT INTACT */
-    * { box-sizing: border-box; }
-    body, html { margin: 0; padding: 0; height: 100%; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; color: #333; overflow-x: hidden; }
-    body {
-      background: linear-gradient(135deg, #6b73ff 0%, #000dff 100%);
-      position: relative; min-height: 100vh;
-      display: flex; justify-content: center; align-items: flex-start;
-      padding-top: 40px;
-    }
-    body::before, body::after { content: ''; position: fixed; border-radius: 50%; opacity: 0.15; filter: blur(100px); z-index: 0; }
-    body::before { width: 300px; height: 300px; background: #ff6b6b; top: 20%; left: 10%; }
-    body::after { width: 400px; height: 400px; background: #ffd93b; bottom: 10%; right: 15%; }
-
-    .container {
-      max-width: 400px; background: rgba(255, 255, 255, 0.95); margin: 0 20px 40px 20px;
-      padding: 30px 40px; border-radius: 12px; box-shadow: 0 8px 24px rgba(0,0,0,0.15); position: relative; z-index: 1;
-    }
-
-    h1 { text-align: center; margin-bottom: 15px; color: #2c3e50; }
-    p.description { font-size: 1rem; color: #555; margin-bottom: 25px; text-align: center; line-height: 1.4; }
-
-    form { display: flex; flex-direction: column; }
-    label { margin-bottom: 6px; font-weight: 600; font-size: 0.9rem; }
-    input[type="email"] {
-      padding: 10px; margin-bottom: 18px; border-radius: 6px; border: 1px solid #ccc; font-size: 1rem; transition: border-color 0.3s;
-    }
-    input[type="email"]:focus { border-color: #007bff; outline: none; }
-
-    button {
-      padding: 12px; background-color: #007bff; border: none; border-radius: 6px; color: white; font-size: 1rem; cursor: pointer;
-      margin-bottom: 15px; transition: background-color 0.3s;
-    }
-    button:hover { background-color: #0056b3; }
-
-    .links { text-align: center; font-size: 0.9rem; }
-    .links a { color: #007bff; text-decoration: none; transition: text-decoration 0.2s; }
-    .links a:hover { text-decoration: underline; }
-
-    @media(max-width: 450px) { .container { width: 90%; padding: 20px; } }
-  </style>
+  .container { background: rgba(255,255,255,0.95); padding:30px 40px; border-radius:12px; box-shadow:0 8px 24px rgba(0,0,0,0.15); max-width:400px; width:90%; z-index:1; position:relative; }
+  h1 { text-align:center; color:#2c3e50; margin-bottom:20px; }
+  label { display:block; margin-top:10px; font-weight:600; }
+  input { width:100%; padding:10px; margin-top:6px; border-radius:6px; border:1px solid #ccc; }
+  button { margin-top:20px; padding:12px; background:#007bff; color:white; border:none; border-radius:6px; cursor:pointer; width:100%; }
+  button:hover { background:#0056b3; }
+  .links { text-align:center; margin-top:15px; font-size:0.9rem; }
+  .links a { color:#007bff; text-decoration:none; }
+  .links a:hover { text-decoration:underline; }
+</style>
 </head>
 <body>
-  <div class="container">
-    <h1>Forgot Password</h1>
-    <p class="description">
-      Enter your registered email address below, and we’ll send you instructions to reset your Attendance System account password.
-    </p>
+<div class="container">
+  <h1>Change Password</h1>
+  <form id="changePasswordForm">
+    <label for="email">Email</label>
+    <input type="email" id="email" placeholder="Enter your email" required>
 
-    <form id="forgotForm">
-      <label for="email">Email Address</label>
-      <input type="email" id="email" name="email" placeholder="Your registered email" required />
+    <label for="currentPassword">Current Password</label>
+    <input type="password" id="currentPassword" placeholder="Enter current password" required>
 
-      <button type="submit">Send Reset Link</button>
-    </form>
+    <label for="newPassword">New Password</label>
+    <input type="password" id="newPassword" placeholder="Enter new password" required>
 
-    <div class="links">
-      Remembered your password? <a href="index.html">Login here</a>
-    </div>
+    <button type="submit">Update Password</button>
+  </form>
+
+  <div class="links">
+    <a href="index.html">Back to Login</a>
   </div>
+</div>
 
-  <!-- Firebase SDK -->
-  <script src="https://www.gstatic.com/firebasejs/12.2.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/12.2.1/firebase-auth.js"></script>
+<!-- Firebase SDK -->
+<script src="https://www.gstatic.com/firebasejs/12.2.1/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/12.2.1/firebase-auth.js"></script>
 
-  <script>
-    // Initialize Firebase
-    const firebaseConfig = {
-      apiKey: "AIzaSyCchBXnuc11KzkpG720IPtWb7Y1MKO0OTU",
-      authDomain: "chronopay-b4267.firebaseapp.com",
-      projectId: "chronopay-b4267",
-      storageBucket: "chronopay-b4267.firebasestorage.app",
-      messagingSenderId: "335594235253",
-      appId: "1:335594235253:web:48c2581cfaabb143731f3c",
-      measurementId: "G-GPY64CKF0Z"
-    };
+<script>
+const firebaseConfig = {
+  apiKey: "AIzaSyCchBXnuc11KzkpG720IPtWb7Y1MKO0OTU",
+  authDomain: "chronopay-b4267.firebaseapp.com",
+  projectId: "chronopay-b4267",
+  storageBucket: "chronopay-b4267.firebasestorage.app",
+  messagingSenderId: "335594235253",
+  appId: "1:335594235253:web:48c2581cfaabb143731f3c",
+  measurementId: "G-GPY64CKF0Z"
+};
 
-    firebase.initializeApp(firebaseConfig);
-    const auth = firebase.auth();
+firebase.initializeApp(firebaseConfig);
+const auth = firebase.auth();
 
-    const forgotForm = document.getElementById("forgotForm");
+const form = document.getElementById('changePasswordForm');
 
-    forgotForm.addEventListener("submit", (e) => {
-      e.preventDefault();
-      const email = document.getElementById("email").value.trim();
+form.addEventListener('submit', async (e) => {
+  e.preventDefault();
 
-      auth.sendPasswordResetEmail(email)
-        .then(() => {
-          alert("Password reset link sent! Check your email.");
-          forgotForm.reset();
-        })
-        .catch((error) => {
-          console.error(error);
-          alert(error.message);
-        });
-    });
-  </script>
+  const email = document.getElementById('email').value.trim();
+  const currentPassword = document.getElementById('currentPassword').value;
+  const newPassword = document.getElementById('newPassword').value;
+
+  try {
+    // Sign in first using email + current password
+    const userCredential = await auth.signInWithEmailAndPassword(email, currentPassword);
+    const user = userCredential.user;
+
+    // Update password
+    await user.updatePassword(newPassword);
+
+    alert("Password updated successfully!");
+    form.reset();
+
+  } catch(error) {
+    console.error(error);
+    alert(error.message);
+  }
+});
+</script>
 </body>
 </html>
