--- a/register.html
+++ b/register.html
@@ -1,101 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  
-  <!-- Favicons -->
-  <link rel="icon" type="image/png" sizes="32x32" href="image/attendancelogo.png?v=1">
-  <link rel="icon" type="image/png" sizes="16x16" href="image/attendancelogo.png?v=1">
-  <link rel="shortcut icon" href="image/attendancelogo.png?v=1">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Register - Attendance System</title>
 
-  <title>Register - Attendance System</title>
+<style>
+  /* ORIGINAL CSS KEPT INTACT */
+  * { box-sizing: border-box; }
+  body, html {
+    margin: 0; padding: 0; height: 100%;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #333; overflow-x: hidden;
+  }
+  body {
+    background: linear-gradient(135deg, #6b73ff 0%, #000dff 100%);
+    position: relative; min-height: 100vh;
+    display: flex; justify-content: center; align-items: flex-start;
+    padding-top: 40px;
+  }
+  body::before, body::after {
+    content: '';
+    position: fixed;
+    border-radius: 50%;
+    opacity: 0.15;
+    filter: blur(100px);
+    z-index: 0;
+  }
+  body::before { width: 300px; height: 300px; background: #ff6b6b; top: 20%; left: 10%; }
+  body::after { width: 400px; height: 400px; background: #ffd93b; bottom: 10%; right: 15%; }
 
-  <style>
-    /* ORIGINAL CSS KEPT INTACT */
-    * { box-sizing: border-box; }
-    body, html {
-      margin: 0; padding: 0; height: 100%;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      color: #333; overflow-x: hidden;
-    }
-    body {
-      background: linear-gradient(135deg, #6b73ff 0%, #000dff 100%);
-      position: relative; min-height: 100vh;
-      display: flex; justify-content: center; align-items: flex-start;
-      padding-top: 40px;
-    }
-    body::before, body::after {
-      content: '';
-      position: fixed;
-      border-radius: 50%;
-      opacity: 0.15;
-      filter: blur(100px);
-      z-index: 0;
-    }
-    body::before { width: 300px; height: 300px; background: #ff6b6b; top: 20%; left: 10%; }
-    body::after { width: 400px; height: 400px; background: #ffd93b; bottom: 10%; right: 15%; }
+  .container {
+    max-width: 400px;
+    background: rgba(255, 255, 255, 0.95);
+    margin: 0 20px 40px 20px;
+    padding: 30px 40px;
+    border-radius: 12px;
+    box-shadow: 0 8px 24px rgba(0, 0, 0, 0.15);
+    position: relative;
+    z-index: 1;
+  }
+  h1 { text-align: center; margin-bottom: 25px; color: #2c3e50; }
+  form { display: flex; flex-direction: column; }
+  label { margin-bottom: 8px; font-weight: 600; font-size: 0.9rem; }
+  input[type="text"],
+  input[type="email"],
+  input[type="password"],
+  input[type="tel"],
+  input[type="date"] {
+    padding: 10px; margin-bottom: 18px; border-radius: 6px;
+    border: 1px solid #ccc; font-size: 1rem; transition: border-color 0.3s;
+  }
+  input:focus { border-color: #007bff; outline: none; }
+  button {
+    padding: 12px; background-color: #007bff; border: none;
+    border-radius: 6px; color: white; font-size: 1rem; cursor: pointer;
+    margin-bottom: 20px; transition: background-color 0.3s;
+  }
+  button:hover { background-color: #0056b3; }
+  .links { text-align: center; font-size: 0.9rem; margin-bottom: 25px; }
+  .links a { color: #007bff; text-decoration: none; transition: text-decoration 0.2s; }
+  .links a:hover { text-decoration: underline; }
+  .description { font-size: 1rem; color: #555; line-height: 1.5; border-top: 1px solid #eee; padding-top: 20px; }
 
-    .container {
-      max-width: 400px;
-      background: rgba(255, 255, 255, 0.95);
-      margin: 0 20px 40px 20px;
-      padding: 30px 40px;
-      border-radius: 12px;
-      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.15);
-      position: relative;
-      z-index: 1;
-    }
-    h1 { text-align: center; margin-bottom: 25px; color: #2c3e50; }
-    form { display: flex; flex-direction: column; }
-    label { margin-bottom: 8px; font-weight: 600; font-size: 0.9rem; }
-    input[type="text"],
-    input[type="email"],
-    input[type="password"],
-    input[type="tel"],
-    input[type="date"] {
-      padding: 10px; margin-bottom: 18px; border-radius: 6px;
-      border: 1px solid #ccc; font-size: 1rem; transition: border-color 0.3s;
-    }
-    input:focus { border-color: #007bff; outline: none; }
-    button {
-      padding: 12px; background-color: #007bff; border: none;
-      border-radius: 6px; color: white; font-size: 1rem; cursor: pointer;
-      margin-bottom: 20px; transition: background-color 0.3s;
-    }
-    button:hover { background-color: #0056b3; }
-    .links { text-align: center; font-size: 0.9rem; margin-bottom: 25px; }
-    .links a { color: #007bff; text-decoration: none; transition: text-decoration 0.2s; }
-    .links a:hover { text-decoration: underline; }
-    .description { font-size: 1rem; color: #555; line-height: 1.5; border-top: 1px solid #eee; padding-top: 20px; }
+  .phone-input { display: flex; margin-bottom: 18px; }
+  select.country-code {
+    flex: 0 0 90px; border-radius: 6px 0 0 6px; border: 1px solid #ccc; border-right: none;
+    padding: 10px 8px; font-size: 1rem; background-color: white; cursor: pointer;
+    transition: border-color 0.3s; height: 42px;
+  }
+  input.local-number {
+    flex: 1; border-radius: 0 6px 6px 0; border: 1px solid #ccc; border-left: none;
+    padding: 10px 12px; font-size: 1rem; height: 42px; box-sizing: border-box;
+    transition: border-color 0.3s;
+  }
 
-    .phone-input { display: flex; margin-bottom: 18px; }
-    select.country-code {
-      flex: 0 0 90px; border-radius: 6px 0 0 6px; border: 1px solid #ccc; border-right: none;
-      padding: 10px 8px; font-size: 1rem; background-color: white; cursor: pointer;
-      transition: border-color 0.3s; height: 42px;
-    }
-    input.local-number {
-      flex: 1; border-radius: 0 6px 6px 0; border: 1px solid #ccc; border-left: none;
-      padding: 10px 12px; font-size: 1rem; height: 42px; box-sizing: border-box;
-      transition: border-color 0.3s;
-    }
+  .birthdate-gender { display: flex; justify-content: space-between; gap: 16px; margin-bottom: 18px; }
+  .birthdate, .gender { flex: 1; display: flex; flex-direction: column; }
+  .gender select, .birthdate input { padding: 10px; font-size: 1rem; border-radius: 6px; border: 1px solid #ccc; margin-top: 6px; cursor: pointer; transition: border-color 0.3s; }
 
-    .birthdate-gender { display: flex; justify-content: space-between; gap: 16px; margin-bottom: 18px; }
-    .birthdate, .gender { flex: 1; display: flex; flex-direction: column; }
-    .gender select, .birthdate input { padding: 10px; font-size: 1rem; border-radius: 6px; border: 1px solid #ccc; margin-top: 6px; cursor: pointer; transition: border-color 0.3s; }
+  .name-fields { display: flex; justify-content: space-between; gap: 10px; }
+  .name-fields input { flex: 1; }
+  .capitalize { text-transform: uppercase; }
 
-    .name-fields { display: flex; justify-content: space-between; gap: 10px; }
-    .name-fields input { flex: 1; }
-    .capitalize { text-transform: uppercase; }
-
-    @media (max-width: 450px) {
-      .phone-input { flex-direction: column; }
-      select.country-code, input.local-number { flex: none; width: 100%; border-radius: 6px; border-left: 1px solid #ccc; border-right: 1px solid #ccc; height: auto; margin-bottom: 10px; }
-      .birthdate-gender { flex-direction: column; }
-      .name-fields { flex-direction: column; }
-    }
-  </style>
+  @media (max-width: 450px) {
+    .phone-input { flex-direction: column; }
+    select.country-code, input.local-number { flex: none; width: 100%; border-radius: 6px; border-left: 1px solid #ccc; border-right: 1px solid #ccc; height: auto; margin-bottom: 10px; }
+    .birthdate-gender { flex-direction: column; }
+    .name-fields { flex-direction: column; }
+  }
+</style>
 </head>
 <body>
   <div class="container">
@@ -158,12 +152,12 @@
     </form>
   </div>
 
-  <!-- Firebase v8 SDK -->
-  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+  <!-- Firebase Modular SDK -->
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/12.2.1/firebase-app.js";
+    import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/12.2.1/firebase-auth.js";
+    import { getFirestore, doc, setDoc, serverTimestamp } from "https://www.gstatic.com/firebasejs/12.2.1/firebase-firestore.js";
 
-  <script>
     const firebaseConfig = {
       apiKey: "AIzaSyCchBXnuc11KzkpG720IPtWb7Y1MKO0OTU",
       authDomain: "chronopay-b4267.firebaseapp.com",
@@ -174,9 +168,9 @@
       measurementId: "G-GPY64CKF0Z"
     };
 
-    firebase.initializeApp(firebaseConfig);
-    const auth = firebase.auth();
-    const db = firebase.firestore();
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
+    const db = getFirestore(app);
 
     const registerForm = document.getElementById("registerForm");
 
@@ -194,10 +188,12 @@
       const password = document.getElementById("password").value;
 
       try {
-        const userCredential = await auth.createUserWithEmailAndPassword(email, password);
+        // Create user in Firebase Auth
+        const userCredential = await createUserWithEmailAndPassword(auth, email, password);
         const user = userCredential.user;
 
-        await db.collection("users").doc(user.uid).set({
+        // Add user to Firestore
+        await setDoc(doc(db, "users", user.uid), {
           username,
           firstName,
           middleName,
@@ -207,12 +203,13 @@
           birthdate,
           gender,
           role: "MEMBER",
-          createdAt: firebase.firestore.FieldValue.serverTimestamp()
+          createdAt: serverTimestamp()
         });
 
         alert("Registration successful! You can now login.");
         registerForm.reset();
         window.location.href = "index.html";
+
       } catch (error) {
         console.error(error);
         alert(error.message);
