--- a/index.html
+++ b/index.html
@@ -1,166 +1,151 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Homepage - Login</title>
 
-  <!-- Favicons -->
-  <link rel="icon" type="image/png" sizes="32x32" href="image/attendancelogo.png?v=1">
-  <link rel="icon" type="image/png" sizes="16x16" href="image/attendancelogo.png?v=1">
-  <link rel="shortcut icon" href="image/attendancelogo.png?v=1">
+<style>
+  /* ORIGINAL CSS KEPT INTACT */
+  * { box-sizing: border-box; }
+  body, html {
+    margin: 0; padding: 0; height: 100%;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #333; overflow-x: hidden;
+  }
+  body {
+    background: linear-gradient(135deg, #6b73ff 0%, #000dff 100%);
+    position: relative; min-height: 100vh;
+    display: flex; justify-content: center; align-items: flex-start;
+    padding-top: 40px;
+  }
+  body::before, body::after {
+    content: '';
+    position: fixed;
+    border-radius: 50%;
+    opacity: 0.15;
+    filter: blur(100px);
+    z-index: 0;
+  }
+  body::before { width: 300px; height: 300px; background: #ff6b6b; top: 20%; left: 10%; }
+  body::after { width: 400px; height: 400px; background: #ffd93b; bottom: 10%; right: 15%; }
 
-  <title>Homepage - Login</title>
-
-  <style>
-    /* ORIGINAL CSS KEPT INTACT */
-    * { box-sizing: border-box; }
-    body, html {
-      margin: 0; padding: 0; height: 100%;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      color: #333; overflow-x: hidden;
-    }
-    body {
-      background: linear-gradient(135deg, #6b73ff 0%, #000dff 100%);
-      position: relative; min-height: 100vh;
-      display: flex; justify-content: center; align-items: flex-start;
-      padding-top: 40px;
-    }
-    body::before, body::after {
-      content: '';
-      position: fixed;
-      border-radius: 50%;
-      opacity: 0.15;
-      filter: blur(100px);
-      z-index: 0;
-    }
-    body::before { width: 300px; height: 300px; background: #ff6b6b; top: 20%; left: 10%; }
-    body::after { width: 400px; height: 400px; background: #ffd93b; bottom: 10%; right: 15%; }
-
-    .container {
-      max-width: 400px;
-      background: rgba(255, 255, 255, 0.95);
-      margin: 0 20px 40px 20px;
-      padding: 30px 40px;
-      border-radius: 12px;
-      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.15);
-      position: relative;
-      z-index: 1;
-    }
-
-    h1 {
-      text-align: center; margin-bottom: 25px; color: #2c3e50;
-      display: flex; justify-content: center; align-items: center; gap: 10px;
-    }
-
-    form { display: flex; flex-direction: column; }
-
-    label { margin-bottom: 6px; font-weight: 600; font-size: 0.9rem; }
-
-    input[type="text"], input[type="password"] {
-      padding: 10px; margin-bottom: 18px; border-radius: 6px;
-      border: 1px solid #ccc; font-size: 1rem; transition: border-color 0.3s;
-    }
-
-    input:focus { border-color: #007bff; outline: none; }
-
-    button {
-      padding: 12px; background-color: #007bff; border: none;
-      border-radius: 6px; color: white; font-size: 1rem; cursor: pointer;
-      margin-bottom: 15px; transition: background-color 0.3s;
-    }
-    button:hover { background-color: #0056b3; }
-
-    .links { display: flex; justify-content: space-between; font-size: 0.9rem; }
-    .links a { color: #007bff; text-decoration: none; transition: text-decoration 0.2s; }
-    .links a:hover { text-decoration: underline; }
-
-    .description { margin-top: 40px; padding-top: 20px; border-top: 1px solid #eee; font-size: 1rem; color: #555; line-height: 1.5; }
-
-    @media(max-width: 450px) {
-      .container { width: 90%; padding: 20px; }
-    }
-  </style>
+  .container {
+    max-width: 400px;
+    background: rgba(255, 255, 255, 0.95);
+    margin: 0 20px 40px 20px;
+    padding: 30px 40px;
+    border-radius: 12px;
+    box-shadow: 0 8px 24px rgba(0, 0, 0, 0.15);
+    position: relative;
+    z-index: 1;
+  }
+  h1 {
+    text-align: center; margin-bottom: 25px; color: #2c3e50;
+  }
+  form { display: flex; flex-direction: column; }
+  label { margin-bottom: 6px; font-weight: 600; font-size: 0.9rem; }
+  input[type="text"], input[type="password"] {
+    padding: 10px; margin-bottom: 18px; border-radius: 6px;
+    border: 1px solid #ccc; font-size: 1rem; transition: border-color 0.3s;
+  }
+  input:focus { border-color: #007bff; outline: none; }
+  button {
+    padding: 12px; background-color: #007bff; border: none;
+    border-radius: 6px; color: white; font-size: 1rem; cursor: pointer;
+    margin-bottom: 15px; transition: background-color 0.3s;
+  }
+  button:hover { background-color: #0056b3; }
+  .links { display: flex; justify-content: space-between; font-size: 0.9rem; }
+  .links a { color: #007bff; text-decoration: none; transition: text-decoration 0.2s; }
+  .links a:hover { text-decoration: underline; }
+  .description { margin-top: 40px; padding-top: 20px; border-top: 1px solid #eee; font-size: 1rem; color: #555; line-height: 1.5; }
+  @media(max-width: 450px) {
+    .container { width: 90%; padding: 20px; }
+  }
+</style>
 </head>
 <body>
-  <div class="container">
-    <h1>Login</h1>
-    <form id="loginForm">
-      <label for="username">Username</label>
-      <input type="text" id="username" name="username" placeholder="Enter your username" required>
+<div class="container">
+  <h1>Login</h1>
+  <form id="loginForm">
+    <label for="username">Username</label>
+    <input type="text" id="username" name="username" placeholder="Enter your username" required>
 
-      <label for="password">Password</label>
-      <input type="password" id="password" name="password" placeholder="Enter your password" required>
+    <label for="password">Password</label>
+    <input type="password" id="password" name="password" placeholder="Enter your password" required>
 
-      <button type="submit">Login</button>
-    </form>
+    <button type="submit">Login</button>
+  </form>
 
-    <div class="links">
-      <a href="forgotpassword.html">Forgot Password?</a>
-      <a href="register.html">Register</a>
-    </div>
-
-    <div class="description">
-      <h2>About Attendance System</h2>
-      <p>
-        This system is designed to help schools, companies, and organizations keep track of attendance easily and efficiently. 
-        Staff and students can log in securely to mark or check their attendance records.
-      </p>
-      <p>
-        Sign in to access your dashboard, view attendance history, and manage your account.
-      </p>
-    </div>
+  <div class="links">
+    <a href="forgotpassword.html">Forgot Password?</a>
+    <a href="register.html">Register</a>
   </div>
 
-  <!-- Firebase v8 SDK -->
-  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+  <div class="description">
+    <h2>About Attendance System</h2>
+    <p>
+      This system is designed to help schools, companies, and organizations keep track of attendance easily and efficiently. 
+      Staff and students can log in securely to mark or check their attendance records.
+    </p>
+    <p>
+      Sign in to access your dashboard, view attendance history, and manage your account.
+    </p>
+  </div>
+</div>
 
-  <script>
-    const firebaseConfig = {
-      apiKey: "AIzaSyCchBXnuc11KzkpG720IPtWb7Y1MKO0OTU",
-      authDomain: "chronopay-b4267.firebaseapp.com",
-      projectId: "chronopay-b4267",
-      storageBucket: "chronopay-b4267.firebasestorage.app",
-      messagingSenderId: "335594235253",
-      appId: "1:335594235253:web:48c2581cfaabb143731f3c",
-      measurementId: "G-GPY64CKF0Z"
-    };
+<!-- Firebase Modular SDK -->
+<script type="module">
+import { initializeApp } from "https://www.gstatic.com/firebasejs/12.2.1/firebase-app.js";
+import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/12.2.1/firebase-auth.js";
+import { getFirestore, collection, query, where, getDocs } from "https://www.gstatic.com/firebasejs/12.2.1/firebase-firestore.js";
 
-    firebase.initializeApp(firebaseConfig);
-    const auth = firebase.auth();
-    const db = firebase.firestore();
+const firebaseConfig = {
+  apiKey: "AIzaSyCchBXnuc11KzkpG720IPtWb7Y1MKO0OTU",
+  authDomain: "chronopay-b4267.firebaseapp.com",
+  projectId: "chronopay-b4267",
+  storageBucket: "chronopay-b4267.firebasestorage.app",
+  messagingSenderId: "335594235253",
+  appId: "1:335594235253:web:48c2581cfaabb143731f3c",
+  measurementId: "G-GPY64CKF0Z"
+};
 
-    const loginForm = document.getElementById("loginForm");
+const app = initializeApp(firebaseConfig);
+const auth = getAuth(app);
+const db = getFirestore(app);
 
-    loginForm.addEventListener("submit", async (e) => {
-      e.preventDefault();
+const loginForm = document.getElementById("loginForm");
 
-      const username = document.getElementById("username").value.trim();
-      const password = document.getElementById("password").value;
+loginForm.addEventListener("submit", async (e) => {
+  e.preventDefault();
+  const username = document.getElementById("username").value.trim();
+  const password = document.getElementById("password").value;
 
-      try {
-        // Search for user by username
-        const querySnapshot = await db.collection("users").where("username", "==", username).get();
-        if (querySnapshot.empty) {
-          alert("Username not found!");
-          return;
-        }
+  try {
+    // Query Firestore for username
+    const usersRef = collection(db, "users");
+    const q = query(usersRef, where("username", "==", username));
+    const querySnapshot = await getDocs(q);
 
-        const userData = querySnapshot.docs[0].data();
-        const email = userData.email;
+    if (querySnapshot.empty) {
+      alert("Username not found!");
+      return;
+    }
 
-        // Sign in using Firebase Auth
-        await auth.signInWithEmailAndPassword(email, password);
+    const userData = querySnapshot.docs[0].data();
+    const email = userData.email;
 
-        alert("Login successful!");
-        window.location.href = "home.html";
+    // Sign in with email
+    await signInWithEmailAndPassword(auth, email, password);
+    alert("Login successful!");
+    window.location.href = "home.html";
 
-      } catch (error) {
-        console.error(error);
-        alert(error.message);
-      }
-    });
-  </script>
+  } catch(error) {
+    console.error(error);
+    alert(error.message);
+  }
+});
+</script>
 </body>
 </html>
